# LearningAI

./: .gitignore  README.md  pyproject.toml
Files/Assignment1/: sample1.txt
Files/Assignment2/: cars.csv
scripts/: Assignment2: Pandas.ipynb  assignment1.ipynb  assignment_1.ipynb  assignment_1_python_basics.ipynb  assignment_2_pandas.ipynb  assignment_3_numpy.ipynb  assignment_4_scikitLearn.ipynb  assignment_5_image_processing_using_numpy.ipynb  assignment_6_basic_ml.ipynb  assignment_6_basic_ml_task_1.ipynb  project_1.ipynb  project_2.py
scripts/assignment_6/: assignment_6_basic_ml_task_1.ipynb  assignment_6_basic_ml_task_2.ipynb  assignment_6_basic_ml_task_3.ipynb  assignment_6_basic_ml_task_4.ipynb
scripts/assignment_7/: assignment_7_task_1.ipynb  assignment_7_task_2.ipynb  assignment_7_task_3.ipynb  assignment_7_task_3_feature_extraction.ipynb
scripts/project_2/: app.py
scripts/project_2/templates/: diabetes.html  home.html  medical_cost.html  pneumonia.html
