[project]
name = "learningai"
version = "0.1.0"
description = ""
authors = [
    {name = "Muhammad-Bilal1605",email = "zaheermbilal1605@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "jupyterlab (>=4.5.3,<5.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas-stubs (>=3.0.0,<3.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
