[tool.poetry]
name = "learningai"
version = "0.1.0"
description = ""
authors = ["Muhammad-Bilal1605 <zaheermbilal1605@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"  # Changed: TensorFlow doesn't support 3.13+ yet
jupyterlab = "^4.5.4"
pandas = "^2.2.0"  # Changed from ^3.0.0
matplotlib = "^3.10.8"
pandas-stubs = "^2.2.0"  # Changed to match pandas version
scikit-learn = "^1.8.0"
ipykernel = "^7.2.0"
smogn = "^0.1.2"
xgboost = "^3.2.0"
tensorflow = "2.19.0"
tensorflow-decision-forests = "1.12.0"
path = "^17.1.1"
flask = "^3.1.3"
tensorflow-hub = "^0.16.1"
setuptools = "80.0.0"
tf-keras = "2.19.0"        # â† add this


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
